--- a/data-services/analysis-and-reporting/index.html
+++ b/data-services/analysis-and-reporting/index.html
@@ -649,7 +649,7 @@ data migration strategy for transporting the data from Legacy to Digital BRM, EC
                 <a href="../../insights/disposal-management-defence-equipment-and-support-de-s/index.html" class="title">Oracle Siebel &amp; DX4C</a>
                                 <p>We are specialists on Greenfield implementations, Upgrade Projects,
 									Transformation Projects, Data Migration. Integration Projects, Order Management Specialists.
-									We have Siebel Certified specialists who have worked on versions of Siebel 98 to the latest</p>
+									We have Siebel Certified specialists who have worked on versions of Siebel 98 to the latest version.</p>
 
 <!-- <p>Systems could not be linked. Confidence in the disposal process could not be recorded or understood.</p> -->
                 <a href="../../insights/disposal-management-defence-equipment-and-support-de-s/index.html" class="button">Read More</a>            </div>
@@ -660,9 +660,9 @@ data migration strategy for transporting the data from Legacy to Digital BRM, EC
                     <img alt="" src="../../site/assets/files/1739/011.400x250.jpg">                </a>
 
                 <a href="../../insights/stethoscope-the-ccg/index.html" class="title">Stethoscope - The CCG</a>
-                                <p>We are specialists on Greenfield implementations, Upgrade Projects,
-									Transformation Projects, Data Migration. Integration Projects, Order Management Specialists.
-									We have Siebel Certified specialists who have worked on versions of Siebel 98 to the latest.</p>
+                                <p>We have worked on multiple Telecom Projects representing the Governance Team,
+									Solution Architect teams, Lead BA Team, and Integration Teams. We have experience working
+									on Telecom Projects in the USA, Australia, Mexico, Turkey, Egypt, Bahrain, Seoul, etc.</p>
                 <a href="../../insights/stethoscope-the-ccg/index.html" class="button">Read More</a>            </div>
 
             </div>
