--- a/data-services/data-science/index.html
+++ b/data-services/data-science/index.html
@@ -56,7 +56,7 @@ gtag('config', 'UA-127189070-1');
 @media  (min-width: 768px) and (-webkit-min-device-pixel-ratio: 1.5), (min-width: 768px) and (min-resolution: 144dpi)  {
 .i14-jpg-1417 { background-image: url('../../site/assets/files/1417/14.870x182.jpg'); }}</style>
     <link rel="canonical" href="index.html" />
-<title>Data Science &amp; AI</title>
+<title>Data Services</title>
 <meta name="title" content="Data Science &amp; AI" />
 <meta property="og:url" content="https://methodsanalytics.co.uk/data-services/data-science/" />
 <meta property="og:title" content="Data Science &amp; AI" />
@@ -284,7 +284,7 @@ gtag('config', 'UA-127189070-1');
                 <div class="col-lg-9">
                     <p class="underscore">Data Services</p>
                     <br>
-                    <h1 class="underscore animate-typing" data-type-speed="200" data-type-delay="500">Data Science &amp; AI</h1>                </div>
+                    <h1 class="underscore animate-typing" data-type-speed="200" data-type-delay="500">Data Services</h1>                </div>
 
                                     <div class="col-lg-3">
                         <!--?xml version="1.0" encoding="utf-8"?-->
@@ -547,11 +547,11 @@ gtag('config', 'UA-127189070-1');
                 <div class="col-lg-3 spy-navigation">
                     <div id="sticker">
                         <ul>
-                                                                <li><a href="#overview" data-scroll="overview">Overview</a></li>
-                                                                    <li><a href="#what-we-deliver" data-scroll="what-we-deliver">What we deliver</a></li>
+                                                                <li><a href="#overview" data-scroll="overview">Transformation and Migration</a></li>
+                                                                    <!-- <li><a href="#what-we-deliver" data-scroll="what-we-deliver">What we deliver</a></li>
                                                                     <li><a href="#tools-of-specialty" data-scroll="tools-of-specialty">Tools of specialty</a></li>
                                                                     <li><a href="#our-approach" data-scroll="our-approach">Our approach</a></li>
-                                                                    <li><a href="#case-studies" data-scroll="case-studies">Case Studies</a></li>
+                                                                    <li><a href="#case-studies" data-scroll="case-studies">Case Studies</a></li> -->
                                                         </ul>
                     </div>
                 </div>
@@ -559,11 +559,23 @@ gtag('config', 'UA-127189070-1');
                 <div class="col-lg-9 contant-col">
                     <div><div class="video-container">
             <video preload="auto" src="https://player.vimeo.com/external/216672651.hd.mp4?s=a2c7eb3b67b5392eb4519f356d6bf766dca26f66&amp;profile_id=174" loop="" autoplay="" playsinline="" style="pointer-events: none;" muted="muted"></video>
-    </div></div><div id='overview'><h2 >Overview</h2><p>We specialise in making powerful data science accessible to your organisation, approachable to your teams and applicable to your challenges.</p>
+    </div></div><div id='overview'><h2 >Transformation and Migration</h2>
+		<p>Businesses are hampered due to large amounts of technical
+			debts caused by legacy Operations/Business Support Systems (O/BSS). Leverage our business-
+			led transformation approach to embrace lean, agile, and intelligent solutions and capture new
+			revenue-generating opportunities by transforming to Oracle BSS / OSS stack.</p>
 
-<p>We offer transparent, explainable machine learning and artificial intelligence that delivers predictive models that your users can understand and trust.  We follow ethical best practices to design solutions and validate our results routinely. We deliver results that are reproducible and explainable. By helping you find relationships and patterns hidden in your data, we’ll unveil insights and future proof your investment by monitoring our solutions over time.</p>
+<p>Rich data stores of legacy systems are inaccessible to modern techniques and most businesses
+	end up with high overhead costs. Reduce your costs by migrating the data trapped in legacy
+	systems and consolidating them along with business applications through a discrete integration
+	approach.</p>
 
-<p>Working with us as your partner, you will be empowered to deploy data science into your current working practices to increase productivity and drive efficiency. </p></div><div id='what-we-deliver'><h2 >What we deliver</h2><p>We deploy data science that is impactful today and builds a capability you can continue to develop tomorrow.</p>
+<p>Our Celcom consultants and Engineers have a vast range of experience transforming and
+	migrating Telcos from Legacy BSS/OSS to Oracle cloud native BSS/OSS. Our Accelerators and
+	Use case repository will be a perfect addition to achieving the business transformation goals in
+	shorter timescales and at lesser cost.</p>
+</div>
+<!-- <div id='what-we-deliver'><h2 >What we deliver</h2><p>We deploy data science that is impactful today and builds a capability you can continue to develop tomorrow.</p>
 
 <ol class="custom-nubered-list">
 	<li><strong>Developing Data Science solutions: </strong>We are a trusted data science partner, of the public sector and we specialise in developing solutions across Health &amp; Care, Defence, Central and Local Government. We work in some of the most sensitive and fast- paced environments, delivering data science to inform high-profile policy and mission-critical decision making. We specialise in: Predictive analytics, forecasting and risk modelling Machine learning, deep learning, and reinforcement learning <strong> </strong>Natural Language Processing including Topic modelling, Document labelling and classification, Named Entity Recognition, Named Entity Linking, Knowledge graphs and ontologies, and Sentiment analysisStatistical analysis   (Task) Automation</li>
@@ -644,10 +656,11 @@ gtag('config', 'UA-127189070-1');
         <div class="overlay" style="background-color:rgba(16, 24, 32, 0.7)"></div>    </a>
 </div>                </div>
             </div>
-        </div>
+        </div> -->
 
-        <img src="../../site/templates/images/decors/dec11%EF%B9%96t=1647601167.svg" class="decor dec1" alt="Decoration Element">        <img src="../../site/templates/images/decors/dec12%EF%B9%96t=1647601167.svg" class="decor dec2" alt="Decoration Element">        <img src="../../site/templates/images/decors/dec13%EF%B9%96t=1647601167.svg" class="decor dec3" alt="Decoration Element">        <img src="../../site/templates/images/decors/dec14%EF%B9%96t=1647601167.svg" class="decors dec4" alt="Decoration Element">        <img src="../../site/templates/images/decors/dec15%EF%B9%96t=1647601167.svg" class="decor dec5" alt="Decoration Element">        <img src="../../site/templates/images/decors/line%EF%B9%96t=1647601167.svg" class="decor dec6" alt="Decoration Element">    </div>
-</section><footer>
+        <!-- <img src="../../site/templates/images/decors/dec11%EF%B9%96t=1647601167.svg" class="decor dec1" alt="Decoration Element">        <img src="../../site/templates/images/decors/dec12%EF%B9%96t=1647601167.svg" class="decor dec2" alt="Decoration Element">        <img src="../../site/templates/images/decors/dec13%EF%B9%96t=1647601167.svg" class="decor dec3" alt="Decoration Element">        <img src="../../site/templates/images/decors/dec14%EF%B9%96t=1647601167.svg" class="decors dec4" alt="Decoration Element">        <img src="../../site/templates/images/decors/dec15%EF%B9%96t=1647601167.svg" class="decor dec5" alt="Decoration Element">        <img src="../../site/templates/images/decors/line%EF%B9%96t=1647601167.svg" class="decor dec6" alt="Decoration Element">    </div> -->
+</section>
+<footer>
     <div class="container1200">
                     <div class="row cta-row">
                 <div class="col-md-8">
